// Accessibility Labels

"AccessibilitySwitchLibrary" = "Change Library Account";

// Generic
"AlphabetFontType" = "Aa";
"AlphabetFontStyle" = "ABCabc";
"AboutApp" = "About Palace";
"About" = "About";
"Libraries" = "Libraries";
"Account" = "Account";
"Acknowledgements" = "Acknowledgements";
"Loading... Please wait." = "Loading... Please wait.";
"BarcodeOrUsername" = "Barcode or Username";
"Borrow" = "Get";
"BorrowFailed" = "Borrowing failed";
"BorrowCouldNotBeCompletedFormat" = "Borrowing %@ could not be completed.";
"Cancel" = "Cancel";
"Catalog" = "Catalog";
"Categories" = "Categories";
"Category" = "Category";
"CheckConnection" = "Please check your connection and try again.";
"Close" = "Close";
"ConnectionFailed" = "Connection Failed";
"Unable to load the web page at this time." = "Unable to load the web page at this time.";
"Content Licenses" = "Content Licenses";
"We found a problem. Please check your connection or close and reopen the app to retry." = "We found a problem. Please check your connection and your credentials in Settings, or close and reopen the app to retry.";
"Delete" = "Delete";
"Description" = "Description";
"DeviceAuthorizationError" = "An error occurred while authorizing this device.";
"Download" = "Download";
"DownloadCouldNotBeCompleted" = "The download could not be completed.";
"DownloadCouldNotBeCompletedFormat" = "The download for %@ could not be completed.";
"The download could not be completed.\nScroll down to 'View Issues' to see details." = "The download could not be completed.\nScroll down to 'View Issues' to see details.";
"The download could not be completed." = "The download could not be completed.";
"View Issues" = "View Issues";
"Report a Problem" = "Report a Problem";
"Related Books" = "Related Books";
"Loading Related Books" = "Loading Related Books";
"DownloadFailed" = "Download Failed";
"Downloading" = "Downloading";
"Error" = "Error";
"Feedback" = "Feedback";
"Hide" = "Hide";
"Information" = "Information";
"LibraryCard" = "Library Card";
"Error Loading Library" = "Error Loading Library";
"We can’t get your library right now. Please close and reopen the app to try again." = "We can’t get your library right now. Please close and reopen the app to try again.";
"LogIn" = "Log In";
"Add Library" = "Add Library";
"More..." = "More…";
"MoreBooks" = "More %@ books";
"NoEmailAccountSet" = "No email account is set for this device.";
"NoResultsFound" = "No results found.";
"NotConnected" = "You are not connected to the internet. Please connect and try again.";
"OK" = "OK";
"PDFNotSupportedFormatStr" = "%@ is an Adobe PDF, which is not supported.";
"Find Your Library" = "Find Your Library";
"PIN" = "PIN";
"Please Wait" = "Please Wait";
"Please wait a moment before switching library accounts." = "Please wait a moment before switching library accounts.";
"PrivacyPolicy" = "Privacy Policy";
"Published" = "Published";
"Publisher" = "Publisher";
"Read" = "Read"; // present tense
"Remove" = "Remove";
"Reserve" = "Reserve";
"Retry" = "Retry";
"Return" = "Return";
"ReturnCouldNotBeCompletedFormat" = "The return of %@ could not be completed.";
"ReturnFailed" = "Return Failed";
"Requesting" = "Requesting";
"Search" = "Search";
"Settings" = "Settings";
"Show" = "Show";
"Sign In" = "Sign in";
"SignOut" = "Sign out";
"SigningOut" = "Signing out";
"SignUp" = "Sign Up";
"Create Card" = "Create Card";
"SoftwareLicenses" = "Software Licenses";
"SyncFailed" = "Sync Failed";
"TimedOut" = "The server did not respond. Please check your connection or try again later.";
"TryAgain" = "Try Again";
"UnknownRequestError" = "An unknown error occurred. Please check your connection or try again later.";
"Verifying" = "Verifying";
"Back" = "Back";
"This URL cannot be found. Please close the app entirely and reload it. If the problem persists, please contact your library's Help Desk." = "This URL cannot be found. Please close the app entirely and reload it. If the problem persists, please contact your library's Help Desk.";

// NYPLAppDelegate
"AppDelegateUpdateRequiredTitle" = "Update Required";
"AppDelegateUpdateRequiredMessageFormat" = "A critical update is required for applications older than version %@. Essential parts of the application will not function correctly until an update is performed.";
"AppDelegateUpdateNow" = "Update Now";
"AppDelegateUpdateRemindMeLater" = "Remind Me Later";

// NYPLBookButtonsView
"BookButtonsViewRemoveHoldTitle" = "Remove Reservation";
"BookButtonsViewRemoveHoldMessage" = "Are you sure you want to remove \"%@\" from your reservations? You will no longer be in line for this book.";
"BookButtonsViewRemoveHoldConfirm" = "Remove";

// Book Details
"BookDetailViewControllerTitle" = "Details";
"BookDetailViewControllerDownloadNeededTitle" = "Your book has not yet been downloaded.";
"BookDetailViewControllerDownloadSuccessfulTitle" = "Your book is ready to read!";
"BookDetailViewControllerAvailableToBorrowTitle" = "This book is available to borrow.";
"BookDetailViewControllerCanHoldTitle" = "All licenses of this book are currently checked out.";
"BookDetailViewControllerHoldingTitleFormat" = "Available for checkout in less than %@.";
"BookDetailViewControllerReservedTitleFormat" = "This reservation will be automatically cancelled in %@.";
"BookDetailViewControllerDistributedByFormat" = "Distributed by: ";
"BookDetailViewControllerBookFormat" = "Book format:";
"BookDetailViewControllerNarrators" = "Narrators:";
"It will expire in %@." = "It will expire in %@.";

// Book Formats
"ePub" = "ePub";
"PDF" = "PDF";
"Audiobook" = "Audiobook";
"Unsupported format" = "Unsupported format";

// NYPLBookCellDelegate
"Unsupported Item" = "Unsupported Item";
"The item you are trying to open is not currently supported." = "The item you are trying to open is not currently supported.";
"Corrupted Audiobook" = "Corrupted Audiobook";
"The audiobook you are trying to open appears to be corrupted. Try downloading it again." = "The audiobook you are trying to open appears to be corrupted. Try downloading it again.";

// NYPLFacetView
"FacetViewNotActive" = "<>";

// NYPLHoldsViewController
"HoldsViewControllerTitle" = "Reservations";
"HoldsViewControllerSearchTitle" = "Search Reservations";
"AvailableForCheckoutHeader" = "AVAILABLE FOR CHECKOUT";
"WaitingForAvailabilityHeader" = "WAITING FOR AVAILABILITY";
"When you reserve a book from the catalog, it will show up here. Look here from time to time to see if your book is available to download." = "When you reserve a book from the catalog, it will show up here. Look here from time to time to see if your book is available to download.";

// NYPLMyBooksDownloadCenter
"MyBooksDownloadCenterConfirmDeleteTitle" = "Delete";
"MyBooksDownloadCenterConfirmDeleteTitleMessageFormat" = "Are you sure you want to delete \"%@\"?";
"MyBooksGoToCatalog" = "Visit the Catalog to\nadd books to My Books.";
"MyBooksDownloadCenterConfirmReturnTitle" = "Return";
"MyBooksDownloadCenterConfirmReturnTitleMessageFormat" = "Are you sure you want to return \"%@\"?";

// NYPLMyBooksViewController
"MyBooksViewControllerTitle" = "My Books";
"MyBooksViewControllerSearchTitle" = "Search My Books";
"MyBooksViewControllerFacetAll" = "All";
"MyBooksViewControllerFacetAuthor" = "Author";
"MyBooksViewControllerFacetOnLoan" = "On Loan";
"MyBooksViewControllerFacetTitle" = "Title";
"MyBooksViewControllerGroupShow" = "Show";
"MyBooksViewControllerGroupSortBy" = "Sort By";

// NYPLReaderViewController (R1)
"ReaderViewControllerCorruptTitle" = "Could Not Display Book";
"ReaderViewControllerCorruptMessage" = "This book is corrupt and cannot be read.";
"ReaderViewControllerCurrentChapter" = "Current Chapter";
"Book" = "Book";
"TOC" = "Table of contents";

// NYPLReaderReadiumView (R1)
"chapter" = "chapter";

// ReaderViewController (R2)
"Reader settings" = "Reader settings";
"Table of contents and bookmarks" = "Table of contents and bookmarks";
"Remove Bookmark" = "Remove Bookmark";
"Add Bookmark" = "Add Bookmark";
"Previous Chapter" = "Previous Chapter";
"Next Chapter" = "Next Chapter";

// NYPLReaderSettingsView
"OriginalFont" = "Default book font";
"SansFont" = "Sans font";
"SerifFont" = "Serif font";
"OpenDyslexicFont" = "Open dyslexic font";
"WhiteOnBlackText" = "White on black text";
"BlackOnSepiaText" = "Black on sepia text";
"BlackOnWhiteText" = "Black on white text";
"DecreaseFontSize" = "Decrease font size";
"IncreaseFontSize" = "Increase font size";
"BrightnessSlider" = "Brightness slider";

// NYPLReaderSettingsViewController
"ReaderViewControllerToggleReaderSettings" = "Toggle reader settings";

// Reader Positions (TOC and Bookmarks)
"ReaderTOCViewControllerTitle" = "Table of Contents";
"%@ through chapter" = "%@ through chapter";
"There are no bookmarks for this book." = "There are no bookmarks for this book.";

// Reader error messages (R2)
"Content Protection Error" = "Content Protection Error";
"The book you were trying to open is invalid." = "The book you were trying to open is invalid.";
"An error was encountered while trying to open this book." = "An error was encountered while trying to open this book. %@";
"The book you were trying to read is in an unsupported format." = "The book you were trying to read is in an unsupported format.";
"The book you were trying to read is corrupted. Please try downloading it again." = "The book you were trying to read is corrupted. Please try downloading it again.";

// NYPLSettings
"The page could not load due to a connection error." = "The page could not load due to a connection error.";

// Authentication generic
"Authentication Expired" = "Authentication Expired";
"Your authentication details have expired. Please sign in again." = "Your authentication details have expired. Please sign in again.";
"Authentication Required" = "Authentication Required";
"Please sign in to use this functionality." = "Please sign in to use this functionality.";

// Age Check
"Age Verification" = "Age Verification";
"Please enter your birth year" = "Please enter your birth year";
"Done" = "Done";
"Next" = "Next";

// NYPLSettingsAccountDetailViewController and NYPLAccountSignInViewController
"Add Library" = "Add Library";
"Report an Issue" = "Report an Issue";
"Show Barcode" = "Show Barcode";
"Hide Barcode" = "Hide Barcode";
"Don't have a library card?" = "Don't have a library card?";
"Sync Bookmarks" = "Sync Bookmarks";
"Save your reading position and bookmarks to all your other devices." = "Save your reading position and bookmarks to all your other devices.";
"SettingsAccountViewControllerAuthenticationReason" = "Authenticate to reveal your PIN.";
"SettingsAccountViewControllerCannotLogOutTitle" = "Logout Failed";
"SettingsAccountViewControllerCannotLogOutMessage" = "Please wait for certain download-related actions to finish before logging out.";
"SettingsAccountViewControllerInvalidCredentials" = "Your barcode and pin combination was not valid. Please try again.";
"SettingsAccountViewControllerLoginFailed" = "Login Failed";
"SettingsAccountViewControllerLogoutFailed" = "Sign Out Failed";
"If you sign out, your books and any saved bookmarks will be removed." = "If you sign out, your books and any saved bookmarks will be removed.";
"If you sign out without enabling Sync, your books and any saved bookmarks will be removed." = "If you sign out without enabling Sync, your books and any saved bookmarks will be removed.";
"If you are under 13, all content downloaded to My Books will be removed." = "If you are under 13, all content downloaded to My Books will be removed.";
"Location" = "Location";
"Error parsing user profile document." = "Error parsing user profile document. Please try again.";
"Trouble locating DRM in profile document." = "Trouble locating DRM in profile document. Please try again.";
"SigningInAgree" = "By signing in, you agree to the End User License Agreement.";
"Want a card for your child?" = "Want a card for your child?";
"Cannot confirm library card eligibility." = "Cannot confirm library card eligibility.";
"Please log out and try your card information again." = "Please log out and try your card information again.";
"Sign-in Error" = "Sign-in Error";
"We could not find a match for the credentials provided." = "We could not find a match for the credentials provided.";

// NYPLSettingsEULAViewController
"Accept" = "Accept";
"Reject" = "Reject";
"EULA" = "User Agreement";
"EULAHaveToAgree" = "You must accept the End User License Agreement to use this application.";
"NOTICE" = "NOTICE";

// NYPLSettingsLibrarySelectionViewController
"Add Your Library" = "Add Your Library";

// NYPLSettingsPrivacyPolicyViewController
"SettingsAccountViewControllerMessageTooManyActivations" = "Too many devices have been authorized with this library card.";

// NYPLWelcomeScreen
"Age Verification" = "Age Verification";
"You must be 13 years of age or older to download some of the books from this collection. How old are you?" = "You must be 13 years of age or older to download some of the books from this collection. How old are you?";
"Find Your Library" = "Find Your Library";
"The SimplyE Collection" = "The SimplyE Collection";
"Add a Library Later" = "Add a Library Later";
"Under 13" = "Under 13";
"13 or Older" = "13 or Older";

// NYPLSettingsAdvancedViewController
"Advanced" = "Advanced";
"Selecting \"Delete\" will remove all bookmarks from the server for %@." = "Selecting \"Delete\" will remove all bookmarks from the server for %@.";
"Delete Server Data" = "Delete Server Data";
"Please wait..." = "Please wait...";
"Delete all the bookmarks you have saved in the cloud." = "Delete all the bookmarks you have saved in the cloud.";

// Open eBooks
"Welcome to Open eBooks" = "Welcome to Open eBooks!";
"Open eBooks provides free books to the children who need them the most.\n\nThe collection includes thousands of popular and award-winning titles as well as hundreds of public domain works." =
"The Open eBooks app provides free books to the children who need them the most.\n\nThe collection includes thousands of popular and award-winning titles as well as hundreds of public domain works.\n\nChildren from low-income areas may qualify for access in several ways.";
"You need to login to access the collection." = "You need to login to access the collection.";

// Date+NYPLAdditions
"year_suffix_short" = "%d y";
"month_suffix_short" = "%d m";
"week_suffix_short" = "%d w";
"day_suffix_short" = "%d d";
"hour_suffix_short" = "%d h";

// Adobe DRM Expired certificate title and message
"Something went wrong with the Adobe DRM system" = "Something went wrong with the Adobe DRM system";
"Some books will be unavailable in this version. Please try updating to the latest version of the application." = "Some books will be unavailable in this version. Please try updating to the latest version of the application.";
"The book license has expired." = "The book license has expired.";

// Onboarding slides, image name = text
"Onboarding-1" = "Step 1 - Find your library";
"Onboarding-2" = "Step 2 - Can't find your library? Go to the Palace Bookshelf or more than 10000 free titles that you can enjoy now";
"Onboarding-3" = "Step 3 - Read. Listen. Enjoy!";

// Encrypted PDF files
"Error extracting encrypted PDF file" = "Error extracting encrypted PDF file";
